# cvc

./: .gitignore  .travis.yml  README.markdown  deploy-boxxy  deploy-count-von-count  deploy-website  drawing.js  mac-addresses  macs-2013.csv  macs.csv
Twitter/: boxxy.py  boxxy.py.out  cities  config.py.example  loggingtest.py  requirements.txt  statejson example  twitter.py
boxxy/: README  README.markdown  make-boxxy-client.sh  package-lock.json  package.json  server.js
config/: ciscoswitch_2017_cfg.txt  gyrid config stepbystep  gyrid.conf  interfaces  interfaces_02032016  setup.sh
count-von-count/: .gitignore  .hlint.yaml  Counter.hs  CounterWatcher.hs  Main.hs  Makefile  Parser.hs  README.markdown  README.md  Setup.sh  Types.hs  config.yaml  count-von-count.cabal  count-von-count.yaml  ctl.rb  gyrid.proto  install_dependencies.sh  lap_time.py  loop-replayer.sh  stack.yaml
count-von-count/arbitrator/: arbitrator.cabal
count-von-count/arbitrator/src/: Arbitrator.hs  Lap.hs  Observation.hs  Sighting.hs
count-von-count/arbitrator/src/Counter/: Core.hs  Map.hs  Modulo.hs
count-von-count/benchmarks/: Ok.hs  stress.rb
count-von-count/config/: deploy.rb
count-von-count/drafts/: modulo.hs
count-von-count/filtermap/: filtermap.cabal
count-von-count/filtermap/src/: Main.hs
count-von-count/integration/: App.hs  Bert.hs  README.markdown  Types.hs  Views.hs  ernie.rb
count-von-count/lib/CountVonCount/: Boxxy.hs  Config.hs  Counter.hs  EventBase.hs  Log.hs  Management.hs  Persistence.hs  Protocol.hs  Sensor.hs  Types.hs  Util.hs  Web.hs
count-von-count/lib/CountVonCount/Counter/: Core.hs  Map.hs  Modulo.hs
count-von-count/lib/CountVonCount/Protocols/: CSV.hs  Gyrid.hs
count-von-count/lib/CountVonCount/Sensor/: Filter.hs  Replay.hs
count-von-count/lib/CountVonCount/Web/: Util.hs  Views.hs
count-von-count/lib/CountVonCount/Web/Views/: Util.hs
count-von-count/lib/Network/WebSockets/Util/: PubSub.hs
count-von-count/scripts/: create_config.py  deploy_cvc_test_mode.sh  dummy-data.js  dummy-laps.hs  dump-laps.js  latest-laps.js  loop-replayer.sh  pokemon.hs  print-score.js  reset-laps.js  team-data.js  teams2012.hs  teams2013.hs  teams2014.hs  teams2015.hs  teams2016.hs  teams2017.hs  teams2018.hs  teams2019.hs  teamsTest2019.hs  teamsTestBatons.hs
count-von-count/simulation/: main.lua  simulation.rb  team.lua
count-von-count/src/: CountVonCount.hs  Gyrid.hs  Replayer.hs  Simulation.hs
count-von-count/src/CountVonCount/: Admin.hs  Analyze.hs  Analyzer.hs  Boxxy.hs  Chan.hs  Config.hs  Configuration.hs  Counter.hs  CounterWatcher.hs  CsvLog.hs  DataSet.hs  Dispatcher.hs  Estimater.hs  EventBase.hs  Feed.hs  FiniteChan.hs  Log.hs  Main.hs  Management.hs  Monitor.hs  MovingAverage.hs  Parser.hs  Persistence.hs  Protocol.hs  Queue.hs  RawSensorEvent.hs  Receiver.hs  ReplayLog.hs  Replayer.hs  Rest.hs  Sensor.hs  Simulation.hs  StationMap.hs  StationMapper.hs  Stream.hs  Types.hs  Util.hs  Web.hs
count-von-count/src/CountVonCount/Admin/: Views.hs
count-von-count/src/CountVonCount/Configuration/: Criteria.hs  MacSet.hs  Rest.hs  StationMap.hs  Util.hs
count-von-count/src/CountVonCount/Counter/: Core.hs  Criteria.hs  Map.hs  Modulo.hs
count-von-count/src/CountVonCount/Persistence/: Core.hs
count-von-count/src/CountVonCount/Protocols/: CSV.hs  Gyrid.hs
count-von-count/src/CountVonCount/Receiver/: Gyrid.hs  Socket.hs  Stdin.hs
count-von-count/src/CountVonCount/Sensor/: Filter.hs  Replay.hs
count-von-count/src/CountVonCount/Web/: Helpers.hs  Partial.hs  Util.hs  Views.hs
count-von-count/src/CountVonCount/Web/Views/: Util.hs
count-von-count/src/Gyrid/: AntennaTurn.hs  Bluetooth_DataIO.hs  Bluetooth_DataRaw.hs  Bluetooth_StateInquiry.hs  Info.hs  Msg.hs  RequestCaching.hs  RequestKeepalive.hs  RequestStartdata.hs  RequestState.hs  ScanPattern.hs  StateAntenna.hs  StateGyrid.hs  StateScanning.hs  Uptime.hs  WiFi_DataDevRaw.hs  WiFi_DataIO.hs  WiFi_DataRaw.hs  WiFi_StateFrequency.hs  WiFi_StateFrequencyLoop.hs
count-von-count/src/Gyrid/Bluetooth_DataIO/: Move.hs
count-von-count/src/Gyrid/Msg/: Type.hs
count-von-count/src/Gyrid/ScanPattern/: Action.hs
count-von-count/src/Gyrid/StateGyrid/: Type.hs
count-von-count/src/Gyrid/StateScanning/: HwType.hs  Type.hs
count-von-count/src/Gyrid/WiFi_DataIO/: Move.hs  Type.hs
count-von-count/src/Gyrid/WiFi_DataRaw/: Ctrl.hs  Data.hs  FrameType.hs  Mgmt.hs
count-von-count/src/Gyrid/WiFi_DataRaw/Ctrl/: SubType.hs
count-von-count/src/Gyrid/WiFi_DataRaw/Mgmt/: Beacon.hs  ProbeReq.hs  SubType.hs
count-von-count/src/Gyrid/WiFi_DataRaw/Mgmt/Beacon/: Type.hs
count-von-count/src/Network/WebSockets/: PubSub.hs
count-von-count/src/Network/WebSockets/Util/: PubSub.hs
count-von-count/static/css/: screen.css
count-von-count/static/js/: monitor.js  partial.js
count-von-count/tests/: TestSuite.hs
count-von-count/tests/CountVonCount/: TestSuite.hs
count-von-count/tests/CountVonCount/Analyze/: Tests.hs
count-von-count/tests/CountVonCount/Analyzer/: Tests.hs
count-von-count/tests/CountVonCount/Counter/: Fixtures.hs  Tests.hs
count-von-count/tests/CountVonCount/Counter/Core/: Tests.hs
count-von-count/tests/CountVonCount/Counter/Fixtures/: Internal.hs
count-von-count/tests/CountVonCount/Management/: Tests.hs
count-von-count/tests/CountVonCount/Persistence/: Tests.hs
count-von-count/tests/CountVonCount/Persistence/Tests/: Util.hs
count-von-count/tests/CountVonCount/Sensor/: Tests.hs
count-von-count/tests/CountVonCount/Sensor/Filter/: Tests.hs
count-von-count/tests/CountVonCount/TestSuite/: Util.hs
count-von-count/tests/CountVonCount/Util/: Tests.hs
count-von-count/translators/: translators.cabal
count-von-count/translators/src/: CSV.hs  Main.hs  Observation.hs  Replay.hs  SensorEvent.hs  Types.hs
cvcv2/: cabal.sandbox.config
data-analysis/: api.py
doc/: logo.tiff  macs.csv
dr.beaker/: pom.xml
join/: Capfile  Gemfile  package.json
macalive/: contains.awk  macalive.sh
manual-count/: count.appcache  (+8 more)
manual-count-v2/: ajax.php  index.html  style.css  ul_laps.sql
(+334 files in other folders)
