Name:          count-von-count
Version:       0.0.0.1
Synopsis:      Count laps
Homepage:      http://github.com/ZeusWPI/12UrenLoop
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Application
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Hs-source-dirs: lib gen
  Ghc-options:    -Wall

  Exposed-modules:
    CountVonCount.Boxxy
    CountVonCount.Config
    CountVonCount.Counter
    CountVonCount.Counter.Core
    CountVonCount.Counter.Map
    CountVonCount.Counter.Modulo
    CountVonCount.EventBase
    CountVonCount.Log
    CountVonCount.Management
    CountVonCount.Persistence
    CountVonCount.Protocol
    CountVonCount.Protocols.CSV
    CountVonCount.Protocols.Gyrid
    CountVonCount.RawSensorEvent
    CountVonCount.Sensor
    CountVonCount.Sensor.Filter
    CountVonCount.Sensor.Replay
    CountVonCount.Types
    CountVonCount.Util
    CountVonCount.Web
    CountVonCount.Web.Partial
    CountVonCount.Web.Util
    CountVonCount.Web.Views
    CountVonCount.Web.Views.Util
    Gyrid
    Gyrid.AntennaTurn
    Gyrid.Bluetooth_DataIO
    Gyrid.Bluetooth_DataIO.Move
    Gyrid.Bluetooth_DataRaw
    Gyrid.Bluetooth_StateInquiry
    Gyrid.Info
    Gyrid.Msg
    Gyrid.Msg.Type
    Gyrid.RequestCaching
    Gyrid.RequestKeepalive
    Gyrid.RequestStartdata
    Gyrid.RequestState
    Gyrid.ScanPattern
    Gyrid.ScanPattern.Action
    Gyrid.StateAntenna
    Gyrid.StateGyrid
    Gyrid.StateGyrid.Type
    Gyrid.StateScanning
    Gyrid.StateScanning.HwType
    Gyrid.StateScanning.Type
    Gyrid.Uptime
    Gyrid.WiFi_DataDevRaw
    Gyrid.WiFi_DataIO
    Gyrid.WiFi_DataIO.Move
    Gyrid.WiFi_DataIO.Type
    Gyrid.WiFi_DataRaw
    Gyrid.WiFi_DataRaw.Ctrl
    Gyrid.WiFi_DataRaw.Ctrl.SubType
    Gyrid.WiFi_DataRaw.Data
    Gyrid.WiFi_DataRaw.FrameType
    Gyrid.WiFi_DataRaw.Mgmt
    Gyrid.WiFi_DataRaw.Mgmt.Beacon
    Gyrid.WiFi_DataRaw.Mgmt.Beacon.Type
    Gyrid.WiFi_DataRaw.Mgmt.ProbeReq
    Gyrid.WiFi_DataRaw.Mgmt.SubType
    Gyrid.WiFi_StateFrequency
    Gyrid.WiFi_StateFrequencyLoop
    Network.WebSockets.Util.PubSub

  Build-depends:
    aeson                       >= 0.5     && < 1.3,
    attoparsec                  >= 0.10.4  && < 0.14,
    base                        >= 4.7     && < 4.11,
    blaze-html                  >= 0.5     && < 0.10,
    blaze-markup                >= 0.5     && < 0.9,
    bytestring                  >= 0.10.2  && < 0.11,
    containers                  >= 0.3     && < 0.6,
    cookie                      >= 0.4.1   && < 0.5,
    data-default                >= 0.5.3   && < 0.8,
    digestive-functors          >= 0.8     && < 0.9,
    digestive-functors-blaze    >= 0.4     && < 0.7,
    digestive-functors-snap     >= 0.4     && < 0.8,
    ekg                         >= 0.3     && < 0.5,
    http-client                 >= 0.5     && < 0.6,
    http-client-tls             >= 0.2.2   && < 0.4,
    io-streams                  >= 1.2.1.0 && < 1.4,
    mtl                         >= 2.0     && < 2.3,
    network                     >= 2.3     && < 2.7,
    protocol-buffers            >= 2.0.14  && < 2.5,
    protocol-buffers-descriptor >= 2.0     && < 2.5,
    resourcet                   >= 1.0     && < 1.2,
    snap-blaze                  >= 0.2     && < 0.3,
    snap-core                   >= 0.8     && < 1.1,
    snap-server                 >= 0.8     && < 1.1,
    sqlite-simple               >= 0.4     && < 0.5,
    text                        >= 0.10    && < 1.3,
    time                        >= 1.5     && < 1.9,
    websockets                  >= 0.8     && < 0.12,
    websockets-snap             >= 0.8.1.0 && < 0.11,
    yaml                        >= 0.7     && < 0.9


Executable count-von-count
  Hs-source-dirs: src
  Main-is:        CountVonCount.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-T

  Build-depends:
    count-von-count,
    -- Copied from 'library' dependencies:
    aeson                       >= 0.5     && < 1.3,
    attoparsec                  >= 0.10.4  && < 0.14,
    base                        >= 4.7     && < 4.11,
    blaze-html                  >= 0.5     && < 0.10,
    blaze-markup                >= 0.5     && < 0.9,
    bytestring                  >= 0.10.2  && < 0.11,
    containers                  >= 0.3     && < 0.6,
    cookie                      >= 0.4.1   && < 0.5,
    data-default                >= 0.5.3   && < 0.8,
    digestive-functors          >= 0.8     && < 0.9,
    digestive-functors-blaze    >= 0.4     && < 0.7,
    digestive-functors-snap     >= 0.4     && < 0.8,
    ekg                         >= 0.3     && < 0.5,
    http-client                 >= 0.5     && < 0.6,
    http-client-tls             >= 0.2.2   && < 0.4,
    io-streams                  >= 1.2.1.0 && < 1.4,
    mtl                         >= 2.0     && < 2.3,
    network                     >= 2.3     && < 2.7,
    protocol-buffers            >= 2.0.14  && < 2.5,
    protocol-buffers-descriptor >= 2.0     && < 2.5,
    resourcet                   >= 1.0     && < 1.2,
    snap-blaze                  >= 0.2     && < 0.3,
    snap-core                   >= 0.8     && < 1.1,
    snap-server                 >= 0.8     && < 1.1,
    sqlite-simple               >= 0.4     && < 0.5,
    text                        >= 0.10    && < 1.3,
    time                        >= 1.5     && < 1.9,
    websockets                  >= 0.8     && < 0.12,
    websockets-snap             >= 0.8.1.0 && < 0.11,
    yaml                        >= 0.7     && < 0.9

Executable count-von-count-simulation
  Hs-source-dirs: src
  Main-is:        Simulation.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts

  Build-depends:
    count-von-count,
    ansi-terminal >= 0.6 && < 0.8,
    random        >= 1.0 && < 1.2,
    -- Copied from 'library' dependencies:
    aeson                       >= 0.5     && < 1.3,
    attoparsec                  >= 0.10.4  && < 0.14,
    base                        >= 4.7     && < 4.11,
    blaze-html                  >= 0.5     && < 0.10,
    blaze-markup                >= 0.5     && < 0.9,
    bytestring                  >= 0.10.2  && < 0.11,
    containers                  >= 0.3     && < 0.6,
    cookie                      >= 0.4.1   && < 0.5,
    data-default                >= 0.5.3   && < 0.8,
    digestive-functors          >= 0.8     && < 0.9,
    digestive-functors-blaze    >= 0.4     && < 0.7,
    digestive-functors-snap     >= 0.4     && < 0.8,
    ekg                         >= 0.3     && < 0.5,
    http-client                 >= 0.5     && < 0.6,
    http-client-tls             >= 0.2.2   && < 0.4,
    io-streams                  >= 1.2.1.0 && < 1.4,
    mtl                         >= 2.0     && < 2.3,
    network                     >= 2.3     && < 2.7,
    protocol-buffers            >= 2.0.14  && < 2.5,
    protocol-buffers-descriptor >= 2.0     && < 2.5,
    resourcet                   >= 1.0     && < 1.2,
    snap-blaze                  >= 0.2     && < 0.3,
    snap-core                   >= 0.8     && < 1.1,
    snap-server                 >= 0.8     && < 1.1,
    sqlite-simple               >= 0.4     && < 0.5,
    text                        >= 0.10    && < 1.3,
    time                        >= 1.5     && < 1.9,
    websockets                  >= 0.8     && < 0.12,
    websockets-snap             >= 0.8.1.0 && < 0.11,
    yaml                        >= 0.7     && < 0.9

Executable count-von-count-replayer
  Hs-source-dirs: src
  Main-is:        Replayer.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts

  Build-depends:
    count-von-count,
    split >= 0.2 && < 0.3,
    -- Copied from 'library' dependencies:
    aeson                       >= 0.5     && < 1.3,
    attoparsec                  >= 0.10.4  && < 0.14,
    base                        >= 4.7     && < 4.11,
    blaze-html                  >= 0.5     && < 0.10,
    blaze-markup                >= 0.5     && < 0.9,
    bytestring                  >= 0.10.2  && < 0.11,
    containers                  >= 0.3     && < 0.6,
    cookie                      >= 0.4.1   && < 0.5,
    data-default                >= 0.5.3   && < 0.8,
    digestive-functors          >= 0.8     && < 0.9,
    digestive-functors-blaze    >= 0.4     && < 0.7,
    digestive-functors-snap     >= 0.4     && < 0.8,
    ekg                         >= 0.3     && < 0.5,
    http-client                 >= 0.5     && < 0.6,
    http-client-tls             >= 0.2.2   && < 0.4,
    io-streams                  >= 1.2.1.0 && < 1.4,
    mtl                         >= 2.0     && < 2.3,
    network                     >= 2.3     && < 2.7,
    protocol-buffers            >= 2.0.14  && < 2.5,
    protocol-buffers-descriptor >= 2.0     && < 2.5,
    resourcet                   >= 1.0     && < 1.2,
    snap-blaze                  >= 0.2     && < 0.3,
    snap-core                   >= 0.8     && < 1.1,
    snap-server                 >= 0.8     && < 1.1,
    sqlite-simple               >= 0.4     && < 0.5,
    text                        >= 0.10    && < 1.3,
    time                        >= 1.5     && < 1.9,
    websockets                  >= 0.8     && < 0.12,
    websockets-snap             >= 0.8.1.0 && < 0.11,
    yaml                        >= 0.7     && < 0.9

Test-suite count-von-count-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests gen
  Main-is:        CountVonCount/TestSuite.hs
  Ghc-options:    -Wall

  Build-depends:
    count-von-count,
    HUnit                >= 1.2    && < 1.7,
    QuickCheck           >= 2.4    && < 2.12,
    test-framework       >= 0.4    && < 0.9,
    test-framework-hunit >= 0.2    && < 0.4,
    -- Copied from 'library' dependencies:
    aeson                       >= 0.5     && < 1.3,
    attoparsec                  >= 0.10.4  && < 0.14,
    base                        >= 4.7     && < 4.11,
    blaze-html                  >= 0.5     && < 0.10,
    blaze-markup                >= 0.5     && < 0.9,
    bytestring                  >= 0.10.2  && < 0.11,
    containers                  >= 0.3     && < 0.6,
    cookie                      >= 0.4.1   && < 0.5,
    data-default                >= 0.5.3   && < 0.8,
    digestive-functors          >= 0.8     && < 0.9,
    digestive-functors-blaze    >= 0.4     && < 0.7,
    digestive-functors-snap     >= 0.4     && < 0.8,
    ekg                         >= 0.3     && < 0.5,
    http-client                 >= 0.5     && < 0.6,
    http-client-tls             >= 0.2.2   && < 0.4,
    io-streams                  >= 1.2.1.0 && < 1.4,
    mtl                         >= 2.0     && < 2.3,
    network                     >= 2.3     && < 2.7,
    protocol-buffers            >= 2.0.14  && < 2.5,
    protocol-buffers-descriptor >= 2.0     && < 2.5,
    resourcet                   >= 1.0     && < 1.2,
    snap-blaze                  >= 0.2     && < 0.3,
    snap-core                   >= 0.8     && < 1.1,
    snap-server                 >= 0.8     && < 1.1,
    sqlite-simple               >= 0.4     && < 0.5,
    text                        >= 0.10    && < 1.3,
    time                        >= 1.5     && < 1.9,
    websockets                  >= 0.8     && < 0.12,
    websockets-snap             >= 0.8.1.0 && < 0.11,
    yaml                        >= 0.7     && < 0.9
