Name:          count-von-count
Version:       0.0.0.1
Synopsis:      Count laps
Homepage:      http://github.com/ZeusWPI/12UrenLoop
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Application
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Hs-source-dirs: lib
  Ghc-options:    -Wall

  Exposed-modules:
    CountVonCount.Boxxy
    CountVonCount.Config
    CountVonCount.Counter
    CountVonCount.Counter.Core
    CountVonCount.Counter.Map
    CountVonCount.Counter.Modulo
    CountVonCount.EventBase
    CountVonCount.Log
    CountVonCount.Management
    CountVonCount.Persistence
    CountVonCount.Protocol
    CountVonCount.Protocols.CSV
    CountVonCount.RawSensorEvent
    CountVonCount.Sensor
    CountVonCount.Sensor.Filter
    CountVonCount.Sensor.Replay
    CountVonCount.Types
    CountVonCount.Util
    CountVonCount.Web
    CountVonCount.Web.Partial
    CountVonCount.Web.Util
    CountVonCount.Web.Views
    CountVonCount.Web.Views.Util
    Network.WebSockets.Util.PubSub

  Build-depends:
    aeson                       ,
    attoparsec                  ,
    base                        ,
    blaze-html                  ,
    blaze-markup                ,
    bytestring                  ,
    containers                  ,
    cookie                      ,
    data-default                ,
    digestive-functors          ,
    digestive-functors-blaze    ,
    digestive-functors-snap     ,
    ekg                         ,
    http-client                 ,
    http-client-tls             ,
    io-streams                  ,
    mtl                         ,
    network                     ,
    resourcet                   ,
    snap-blaze                  ,
    snap-core                   ,
    snap-server                 ,
    sqlite-simple               ,
    text                        ,
    time                        ,
    websockets                  ,
    websockets-snap             ,
    yaml


Executable count-von-count
  Hs-source-dirs: src
  Main-is:        CountVonCount.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-T

  Build-depends:
    count-von-count,
    -- Copied from library
    aeson                       ,
    attoparsec                  ,
    base                        ,
    blaze-html                  ,
    blaze-markup                ,
    bytestring                  ,
    containers                  ,
    cookie                      ,
    data-default                ,
    digestive-functors          ,
    digestive-functors-blaze    ,
    digestive-functors-snap     ,
    ekg                         ,
    http-client                 ,
    http-client-tls             ,
    io-streams                  ,
    mtl                         ,
    network                     ,
    resourcet                   ,
    snap-blaze                  ,
    snap-core                   ,
    snap-server                 ,
    sqlite-simple               ,
    text                        ,
    time                        ,
    websockets                  ,
    websockets-snap             ,
    yaml

Executable count-von-count-simulation
  Hs-source-dirs: src
  Main-is:        Simulation.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts

  Build-depends:
    count-von-count,
    ansi-terminal ,
    random,
    -- Copied from library
    aeson                       ,
    attoparsec                  ,
    base                        ,
    blaze-html                  ,
    blaze-markup                ,
    bytestring                  ,
    containers                  ,
    cookie                      ,
    data-default                ,
    digestive-functors          ,
    digestive-functors-blaze    ,
    digestive-functors-snap     ,
    ekg                         ,
    http-client                 ,
    http-client-tls             ,
    io-streams                  ,
    mtl                         ,
    network                     ,
    resourcet                   ,
    snap-blaze                  ,
    snap-core                   ,
    snap-server                 ,
    sqlite-simple               ,
    text                        ,
    time                        ,
    websockets                  ,
    websockets-snap             ,
    yaml

Executable count-von-count-replayer
  Hs-source-dirs: src
  Main-is:        Replayer.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts

  Build-depends:
    count-von-count,
    split,
    -- Copied from library
    aeson                       ,
    attoparsec                  ,
    base                        ,
    blaze-html                  ,
    blaze-markup                ,
    bytestring                  ,
    containers                  ,
    cookie                      ,
    data-default                ,
    digestive-functors          ,
    digestive-functors-blaze    ,
    digestive-functors-snap     ,
    ekg                         ,
    http-client                 ,
    http-client-tls             ,
    io-streams                  ,
    mtl                         ,
    network                     ,
    resourcet                   ,
    snap-blaze                  ,
    snap-core                   ,
    snap-server                 ,
    sqlite-simple               ,
    text                        ,
    time                        ,
    websockets                  ,
    websockets-snap             ,
    yaml

Test-suite count-von-count-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        CountVonCount/TestSuite.hs
  Ghc-options:    -Wall

  Build-depends:
    count-von-count,
    HUnit                ,
    QuickCheck           ,
    test-framework       ,
    test-framework-hunit ,
    -- Copied from library
    aeson                       ,
    attoparsec                  ,
    base                        ,
    blaze-html                  ,
    blaze-markup                ,
    bytestring                  ,
    containers                  ,
    cookie                      ,
    data-default                ,
    digestive-functors          ,
    digestive-functors-blaze    ,
    digestive-functors-snap     ,
    ekg                         ,
    http-client                 ,
    http-client-tls             ,
    io-streams                  ,
    mtl                         ,
    network                     ,
    resourcet                   ,
    snap-blaze                  ,
    snap-core                   ,
    snap-server                 ,
    sqlite-simple               ,
    text                        ,
    time                        ,
    websockets                  ,
    websockets-snap             ,
    yaml
