Name:          count-von-count
Version:       0.0.0.1
Synopsis:      Count laps
Homepage:      http://github.com/ZeusWPI/12UrenLoop
Author:        Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:    Jasper Van der Jeugt <m@jaspervdj.be>
Category:      Application
Build-type:    Simple
Cabal-version: >= 1.8

Library
  Hs-source-dirs: lib
  Ghc-options:    -Wall

  Exposed-modules:
    CountVonCount.Boxxy
    CountVonCount.Config
    CountVonCount.Counter
    CountVonCount.Counter.Core
    CountVonCount.Counter.Map
    CountVonCount.Counter.Modulo
    CountVonCount.EventBase
    CountVonCount.Log
    CountVonCount.Management
    CountVonCount.Persistence
    CountVonCount.Protocol
    CountVonCount.Protocols.CSV
    CountVonCount.RawSensorEvent
    CountVonCount.Sensor
    CountVonCount.Sensor.Filter
    CountVonCount.Sensor.Replay
    CountVonCount.Types
    CountVonCount.Util
    CountVonCount.Web
    CountVonCount.Web.Partial
    CountVonCount.Web.Util
    CountVonCount.Web.Views
    CountVonCount.Web.Views.Util
    Network.WebSockets.Util.PubSub


  Build-depends:
    aeson                       >= 1.4  && < 1.5,
    attoparsec                  >= 0.13 && < 0.14,
    base                        >= 4.12 && < 4.13,
    blaze-html                  >= 0.9  && < 0.10,
    blaze-markup                >= 0.8  && < 0.9,
    bytestring                  >= 0.10 && < 0.11,
    containers                  >= 0.6  && < 0.7,
    cookie                      >= 0.4  && < 0.5,
    data-default                >= 0.7  && < 0.8,
    digestive-functors          >= 0.8  && < 0.9,
    digestive-functors-blaze    >= 0.6  && < 0.7,
    digestive-functors-snap     >= 0.7  && < 0.8,
    ekg                         >= 0.4  && < 0.5,
    http-client                 >= 0.5  && < 0.6,
    http-client-tls             >= 0.3  && < 0.4,
    io-streams                  >= 1.5  && < 1.6,
    mtl                         >= 2.2  && < 2.3,
    network                     >= 2.8  && < 2.9,
    resourcet                   >= 1.2  && < 1.3,
    snap-blaze                  >= 0.2  && < 0.3,
    snap-core                   >= 1.0  && < 1.1,
    snap-server                 >= 1.1  && < 1.2,
    sqlite-simple               >= 0.4  && < 0.5,
    text                        >= 1.2  && < 1.3,
    time                        >= 1.8  && < 1.9,
    websockets                  >= 0.12 && < 1.13,
    websockets-snap             >= 0.10 && < 0.11,
    yaml                        >= 0.11 && < 0.12


Executable count-von-count
  Hs-source-dirs: src
  Main-is:        CountVonCount.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-T

  Build-depends:
    count-von-count,
    -- Copied from library
    aeson                       >= 1.4  && < 1.5,
    attoparsec                  >= 0.13 && < 0.14,
    base                        >= 4.12 && < 4.13,
    blaze-html                  >= 0.9  && < 0.10,
    blaze-markup                >= 0.8  && < 0.9,
    bytestring                  >= 0.10 && < 0.11,
    containers                  >= 0.6  && < 0.7,
    cookie                      >= 0.4  && < 0.5,
    data-default                >= 0.7  && < 0.8,
    digestive-functors          >= 0.8  && < 0.9,
    digestive-functors-blaze    >= 0.6  && < 0.7,
    digestive-functors-snap     >= 0.7  && < 0.8,
    ekg                         >= 0.4  && < 0.5,
    http-client                 >= 0.5  && < 0.6,
    http-client-tls             >= 0.3  && < 0.4,
    io-streams                  >= 1.5  && < 1.6,
    mtl                         >= 2.2  && < 2.3,
    network                     >= 2.8  && < 2.9,
    resourcet                   >= 1.2  && < 1.3,
    snap-blaze                  >= 0.2  && < 0.3,
    snap-core                   >= 1.0  && < 1.1,
    snap-server                 >= 1.1  && < 1.2,
    sqlite-simple               >= 0.4  && < 0.5,
    text                        >= 1.2  && < 1.3,
    time                        >= 1.8  && < 1.9,
    websockets                  >= 0.12 && < 1.13,
    websockets-snap             >= 0.10 && < 0.11,
    yaml                        >= 0.11 && < 0.12

Executable count-von-count-simulation
  Hs-source-dirs: src
  Main-is:        Simulation.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts

  Build-depends:
    count-von-count,
    ansi-terminal >= 0.8 && < 0.9,
    random        >= 1.1 && < 1.2,
    -- Copied from library
    aeson                       >= 1.4  && < 1.5,
    attoparsec                  >= 0.13 && < 0.14,
    base                        >= 4.12 && < 4.13,
    blaze-html                  >= 0.9  && < 0.10,
    blaze-markup                >= 0.8  && < 0.9,
    bytestring                  >= 0.10 && < 0.11,
    containers                  >= 0.6  && < 0.7,
    cookie                      >= 0.4  && < 0.5,
    data-default                >= 0.7  && < 0.8,
    digestive-functors          >= 0.8  && < 0.9,
    digestive-functors-blaze    >= 0.6  && < 0.7,
    digestive-functors-snap     >= 0.7  && < 0.8,
    ekg                         >= 0.4  && < 0.5,
    http-client                 >= 0.5  && < 0.6,
    http-client-tls             >= 0.3  && < 0.4,
    io-streams                  >= 1.5  && < 1.6,
    mtl                         >= 2.2  && < 2.3,
    network                     >= 2.8  && < 2.9,
    resourcet                   >= 1.2  && < 1.3,
    snap-blaze                  >= 0.2  && < 0.3,
    snap-core                   >= 1.0  && < 1.1,
    snap-server                 >= 1.1  && < 1.2,
    sqlite-simple               >= 0.4  && < 0.5,
    text                        >= 1.2  && < 1.3,
    time                        >= 1.8  && < 1.9,
    websockets                  >= 0.12 && < 1.13,
    websockets-snap             >= 0.10 && < 0.11,
    yaml                        >= 0.11 && < 0.12

Executable count-von-count-replayer
  Hs-source-dirs: src
  Main-is:        Replayer.hs
  Ghc-options:    -Wall -O2 -threaded -rtsopts

  Build-depends:
    count-von-count,
    split >= 0.2 && < 0.3,
    -- Copied from library
    aeson                       >= 1.4  && < 1.5,
    attoparsec                  >= 0.13 && < 0.14,
    base                        >= 4.12 && < 4.13,
    blaze-html                  >= 0.9  && < 0.10,
    blaze-markup                >= 0.8  && < 0.9,
    bytestring                  >= 0.10 && < 0.11,
    containers                  >= 0.6  && < 0.7,
    cookie                      >= 0.4  && < 0.5,
    data-default                >= 0.7  && < 0.8,
    digestive-functors          >= 0.8  && < 0.9,
    digestive-functors-blaze    >= 0.6  && < 0.7,
    digestive-functors-snap     >= 0.7  && < 0.8,
    ekg                         >= 0.4  && < 0.5,
    http-client                 >= 0.5  && < 0.6,
    http-client-tls             >= 0.3  && < 0.4,
    io-streams                  >= 1.5  && < 1.6,
    mtl                         >= 2.2  && < 2.3,
    network                     >= 2.8  && < 2.9,
    resourcet                   >= 1.2  && < 1.3,
    snap-blaze                  >= 0.2  && < 0.3,
    snap-core                   >= 1.0  && < 1.1,
    snap-server                 >= 1.1  && < 1.2,
    sqlite-simple               >= 0.4  && < 0.5,
    text                        >= 1.2  && < 1.3,
    time                        >= 1.8  && < 1.9,
    websockets                  >= 0.12 && < 1.13,
    websockets-snap             >= 0.10 && < 0.11,
    yaml                        >= 0.11 && < 0.12

Test-suite count-von-count-tests
  Type:           exitcode-stdio-1.0
  Hs-source-dirs: src tests
  Main-is:        CountVonCount/TestSuite.hs
  Ghc-options:    -Wall

  Other-modules:
    CountVonCount.Counter.Core.Tests
    CountVonCount.Counter.Fixtures
    CountVonCount.Counter.Fixtures.Internal
    CountVonCount.Counter.Tests
    CountVonCount.Management.Tests
    CountVonCount.Persistence.Tests
    CountVonCount.Sensor.Filter.Tests
    CountVonCount.Sensor.Tests
    CountVonCount.TestSuite.Util
    CountVonCount.Util.Tests

  Build-depends:
    count-von-count,
    HUnit                ,
    QuickCheck           ,
    test-framework       ,
    test-framework-hunit ,
    -- Copied from library
    aeson                       >= 1.4  && < 1.5,
    attoparsec                  >= 0.13 && < 0.14,
    base                        >= 4.12 && < 4.13,
    blaze-html                  >= 0.9  && < 0.10,
    blaze-markup                >= 0.8  && < 0.9,
    bytestring                  >= 0.10 && < 0.11,
    containers                  >= 0.6  && < 0.7,
    cookie                      >= 0.4  && < 0.5,
    data-default                >= 0.7  && < 0.8,
    digestive-functors          >= 0.8  && < 0.9,
    digestive-functors-blaze    >= 0.6  && < 0.7,
    digestive-functors-snap     >= 0.7  && < 0.8,
    ekg                         >= 0.4  && < 0.5,
    http-client                 >= 0.5  && < 0.6,
    http-client-tls             >= 0.3  && < 0.4,
    io-streams                  >= 1.5  && < 1.6,
    mtl                         >= 2.2  && < 2.3,
    network                     >= 2.8  && < 2.9,
    resourcet                   >= 1.2  && < 1.3,
    snap-blaze                  >= 0.2  && < 0.3,
    snap-core                   >= 1.0  && < 1.1,
    snap-server                 >= 1.1  && < 1.2,
    sqlite-simple               >= 0.4  && < 0.5,
    text                        >= 1.2  && < 1.3,
    time                        >= 1.8  && < 1.9,
    websockets                  >= 0.12 && < 1.13,
    websockets-snap             >= 0.10 && < 0.11,
    yaml                        >= 0.11 && < 0.12
