name:                arbitrator
version:             0.0.0.0
license:             WTFPL
license-file:        LICENSE
author:              Jasper Van der Jeugt / Ilion Beyst
maintainer:          ilion.beyst@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable arbitrator
  main-is:             Arbitrator.hs
  build-depends:       base >=4.8 && <4.9,
                       containers >= 0.5 && < 0.6,
                       transformers >= 0.4 && < 0.5,
                       mtl >= 2.2 && < 2.3,
                       bytestring >= 0.10 && < 0.11,
                       text >= 1.2 && < 1.3,
                       time >= 1.5 && < 1.7,
                       aeson >= 0.9 && < 0.10,
                       pipes >= 4.1 && < 4.2,
                       pipes-bytestring >= 2.1 && < 2.2,
                       pipes-attoparsec >= 0.5 && < 0.6,
                       pipes-aeson >= 0.4 && < 0.5,
                       lens-family >= 1.2 && < 1.3
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
